style.css
/* ... */
.card-carouselcustom .my-card1:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  border-radius: 100%;
  background-color: rgba(0, 0, 0, 0.3);
  bottom: -5rem;
  -webkit-filter: blur(4px);
  filter: blur(4px);
}

.card-carouselcustom .my-card1.activecarousel1 {
  z-index: 3;
  -webkit-transform: scale(1) translateY(0) translateX(0);
  transform: scale(1) translateY(0) translateX(0);
  opacity: 1;
  pointer-events: auto;
  transition: 1s;
}

.card-carouselcustom .my-card1.prev,
.card-carouselcustom .my-card1.next {
  z-index: 2;
  -webkit-transform: scale(0.8) translateY(-1rem) translateX(0);
  transform: scale(0.8) translateY(-1rem) translateX(0);
  opacity: 0.6;
  pointer-events: auto;
  transition: 1s;
}
@media (max-width: 667px) {
  .ourarticleitem {
    margin-left: 0;
    width: 130%;
    margin-left: -18%;
  }
  .ourarticlerow img {
    width: 150%;
    margin-left: -30%;
  }
}
@media (max-width: 536px) {
  .ourarticlerow img {
    width: 200%;
    margin-left: -55%;
  }
}

@media (max-width: 323px) {
  .ourarticlerow img {
    width: 250%;
  }
  .ourarticleitem {
    width: 160%;
    margin-left: -25%;
  }
}

/* Custom Button */
a.animated-button.thar-three {
  color: #0c0217;
  cursor: pointer;
  display: block;
  position: relative;
  border: 2px solid #0c0217;
  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
  padding-left: 5%;
  padding-right: 5%;
  font-size: 120%;
}
a.animated-button.thar-three:hover {
  color: white !important;
  background-color: transparent;
  text-shadow: nthree;
}
a.animated-button.thar-three:hover:before {
  left: 0%;
  right: auto;
  width: 100%;
}
a.animated-button.thar-three:before {
  display: block;
  position: absolute;
  top: 0px;
  right: 0px;
  height: 100%;
  width: 0px;
  z-index: -1;
  content: "";
  color: white !important;
  background: #0c0217;
  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
}
a.animated-button.thar-four {
  color: #fff;
  cursor: pointer;
  display: block;
  position: relative;
  border: 2px solid #0c0217;
  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
}
a.animated-button.thar-four:hover {
  color: white !important;
  background-color: transparent;
  text-shadow: nfour;
}
a.animated-button.thar-four:hover:before {
  right: 0%;
  left: auto;
  width: 100%;
}
a.animated-button.thar-four:before {
  display: block;
  position: absolute;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 0px;
  z-index: -1;
  content: "";
  color: white !important;
  background: #0c0217;
  transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
}

/* RSS ARTICLE */
#RSSarticle {
  margin-top: 5%;
}
/* width */
#RSSarticle::-webkit-scrollbar {
  width: 20px;
}

/* Track */
#RSSarticle::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
#RSSarticle::-webkit-scrollbar-thumb {
  background: white;
  border-radius: 10px;
}
#RSSarticle {
  align-items: stretch;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
  /*-ms-overflow-style: none; /* IE and Edge */
  /*scrollbar-width: none; /* Firefox */
}
.card.article {
  /*float: left;*/
  max-width: 18rem;
  margin-right: 2%;
  padding: 0.75rem;
  margin-bottom: 2rem;
  border: 0;
  flex-basis: 30%;
  flex-grow: 0;
  flex-shrink: 0;
  text-decoration: none;
  color: black;
}
.imagecontainer {
  width: 100%;
  height: 16.5rem;
  overflow: hidden;
}
.imagecontainer img {
  width: 100%;
  margin-bottom: 0.75rem;
}

.card-text {
  font-size: 85%;
}

@media (max-width: 768px) {
  .card.article {
    flex-basis: 55%;
  }
}
@media (max-width: 576px) {
  .card {
    flex-basis: 95%;
    margin-left: 2%;
  }
}

/* Custom Button */
button {
  font-family: "Public Sans", sans-serif;
}

/* Custom Accordation */
.accordion-button::before {
  content: "";
  width: 14px;
  height: 2px;
  background: #333;
  position: absolute;
  top: calc(50% - 1px);
  right: 1rem;
  display: block;
  transition: all 0.3s;
}

.accordion-button::after {
  content: "";
  width: 2px;
  height: 14px;
  background: #333;
  position: absolute;
  top: calc(50% - 7px);
  right: calc(1rem + 6px);
  display: block;
  transition: all 0.3s;
}

.accordion-button[aria-expanded="true"]::after {
  transform: rotate(90deg) translateX(-1px);
}

.accordion-button[aria-expanded="true"]::before {
  transform: rotate(180deg);
}

/* GALLERY STYLE */
.gallery {
  padding: 80px 0;
}
.gallery img {
  background-color: #ffffff;
  padding: 15px;
  width: 100%;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
  cursor: pointer;
}
.gallery-item:hover {
  transform: scale(1.05);
}

